--- a/csharp/Stream/OpenSvip.Stream.csproj
+++ b/csharp/Stream/OpenSvip.Stream.csproj
@@ -34,8 +34,8 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+        <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+          <HintPath>..\..\..\..\..\XStudioSinger\Newtonsoft.Json.dll</HintPath>
         </Reference>
         <Reference Include="SingingTool.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>C:\Users\YQ之神\Desktop\NoFuserEx_Output\SingingTool.Library.dll</HintPath>
