--- a/csharp/Model/OpenSvip.Model.csproj
+++ b/csharp/Model/OpenSvip.Model.csproj
@@ -34,13 +34,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\..\..\..\..\XStudioSinger\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\.tmp\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SingingTool.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>C:\Users\YQ之神\Desktop\NoFuserEx_Output\SingingTool.Library.dll</HintPath>
+      <HintPath>..\.tmp\SingingTool.Library.dll</HintPath>
     </Reference>
     <Reference Include="SingingTool.Model, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>C:\Users\YQ之神\Desktop\NoFuserEx_Output\SingingTool.Model.dll</HintPath>
+      <HintPath>..\.tmp\SingingTool.Model.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
