--- a/csharp/Console/OpenSvip.Console.csproj
+++ b/csharp/Console/OpenSvip.Console.csproj
@@ -2,9 +2,9 @@
 
     <PropertyGroup>
         <TargetFramework>net472</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>disable</Nullable>
-        <LangVersion>10</LangVersion>
+        <LangVersion>7.3</LangVersion>
         <RootNamespace>OpenSvip.Console</RootNamespace>
         <OutputType>Exe</OutputType>
     </PropertyGroup>
