--- a/csharp/Adapter/OpenSvip.Adapter.csproj
+++ b/csharp/Adapter/OpenSvip.Adapter.csproj
@@ -39,7 +39,7 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Converter.cs" />
+        <Compile Include="IProjectConverter.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
