--- a/csharp/Model/OpenSvip.Model.csproj
+++ b/csharp/Model/OpenSvip.Model.csproj
@@ -34,13 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\.tmp\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="SingingTool.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\.tmp\SingingTool.Library.dll</HintPath>
-    </Reference>
-    <Reference Include="SingingTool.Model, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\.tmp\SingingTool.Model.dll</HintPath>
+      <HintPath>..\..\..\..\..\XStudioSinger\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -51,15 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Const.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="OpenSvip.Const.Singers.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
