--- a/csharp/Stream/OpenSvip.Stream.csproj
+++ b/csharp/Stream/OpenSvip.Stream.csproj
@@ -53,13 +53,16 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="BinarySvipConverter.cs" />
+        <Compile Include="BinarySvipDecoder.cs" />
+        <Compile Include="BinarySvipEncoder.cs" />
         <Compile Include="JsonSvipConverter.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="OpenSvipConst.cs" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Adapter\OpenSvip.Adapter.csproj">
+      <ProjectReference Include="..\Framework\OpenSvip.Framework.csproj">
         <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
-        <Name>OpenSvip.Adapter</Name>
+        <Name>OpenSvip.Framework</Name>
       </ProjectReference>
       <ProjectReference Include="..\Model\OpenSvip.Model.csproj">
         <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
@@ -68,6 +71,11 @@
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <Content Include="OpenSvip.Const.Singers.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
