automatically detect plugins: plugins can now be released separately

--- a/csharp/Plugins/JsonSvip/Plugin.JsonSvip.csproj
+++ b/csharp/Plugins/JsonSvip/Plugin.JsonSvip.csproj
@@ -4,15 +4,13 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{E36D37FC-A83E-40E7-A7CF-5D366653A7DF}</ProjectGuid>
+        <ProjectGuid>{B16A0B55-FEF1-41A4-B83F-419A63B07BC1}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>OpenSvip.Stream</RootNamespace>
-        <AssemblyName>OpenSvip.Stream</AssemblyName>
+        <RootNamespace>Plugin.JsonSvip</RootNamespace>
+        <AssemblyName>Plugin.JsonSvip</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
-        <LangVersion>7.3</LangVersion>
-        <Nullable>disable</Nullable>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -35,16 +33,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\.tmp\XStudioSinger\Newtonsoft.Json.dll</HintPath>
-        </Reference>
-        <Reference Include="SingingTool.Const, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\.tmp\XStudioSinger\SingingTool.Const.dll</HintPath>
-        </Reference>
-        <Reference Include="SingingTool.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\.tmp\SingingTool.Library.dll</HintPath>
-        </Reference>
-        <Reference Include="SingingTool.Model, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\.tmp\SingingTool.Model.dll</HintPath>
+          <HintPath>..\..\.tmp\Newtonsoft.Json.dll</HintPath>
         </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
@@ -52,28 +41,21 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="BinarySvipConverter.cs" />
-        <Compile Include="BinarySvipDecoder.cs" />
-        <Compile Include="BinarySvipEncoder.cs" />
         <Compile Include="JsonSvipConverter.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="OpenSvipConst.cs" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Framework\OpenSvip.Framework.csproj">
+      <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
         <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
         <Name>OpenSvip.Framework</Name>
       </ProjectReference>
-      <ProjectReference Include="..\Model\OpenSvip.Model.csproj">
+      <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
         <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
         <Name>OpenSvip.Model</Name>
       </ProjectReference>
     </ItemGroup>
     <ItemGroup>
-      <None Include="App.config" />
-    </ItemGroup>
-    <ItemGroup>
-      <Content Include="OpenSvip.Const.Singers.json">
+      <Content Include="Properties.xml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
