--- a/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
+++ b/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
@@ -4,14 +4,15 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{1A025CF4-6CE6-42F9-AD09-16E56D840D95}</ProjectGuid>
+        <ProjectGuid>{E36D37FC-A83E-40E7-A7CF-5D366653A7DF}</ProjectGuid>
         <OutputType>Library</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>OpenSvip.Framework</RootNamespace>
-        <AssemblyName>OpenSvip.Framework</AssemblyName>
+        <RootNamespace>OpenSvip.Stream</RootNamespace>
+        <AssemblyName>Plugin.BinarySvip</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>7.3</LangVersion>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,20 +34,47 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
+        <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+          <HintPath>..\.tmp\XStudioSinger\Newtonsoft.Json.dll</HintPath>
+        </Reference>
+        <Reference Include="SingingTool.Const, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\.tmp\XStudioSinger\SingingTool.Const.dll</HintPath>
+        </Reference>
+        <Reference Include="SingingTool.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\.tmp\SingingTool.Library.dll</HintPath>
+        </Reference>
+        <Reference Include="SingingTool.Model, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\.tmp\SingingTool.Model.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Option.cs" />
-        <Compile Include="Plugin.cs" />
-        <Compile Include="IProjectConverter.cs" />
-        <Compile Include="PluginManager.cs" />
+        <Compile Include="BinarySvipConverter.cs" />
+        <Compile Include="BinarySvipDecoder.cs" />
+        <Compile Include="BinarySvipEncoder.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="OpenSvipConst.cs" />
     </ItemGroup>
     <ItemGroup>
-      <ProjectReference Include="..\Model\OpenSvip.Model.csproj">
+      <None Include="App.config" />
+    </ItemGroup>
+    <ItemGroup>
+      <Content Include="OpenSvip.Const.Singers.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Include="Properties.xml">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
+        <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
+        <Name>OpenSvip.Framework</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
         <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
         <Name>OpenSvip.Model</Name>
       </ProjectReference>
