update plugin 'BinarySvip': fix vibrato & version bug

--- a/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
+++ b/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
@@ -37,6 +37,9 @@
         <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
           <HintPath>..\.tmp\XStudioSinger\Newtonsoft.Json.dll</HintPath>
         </Reference>
+        <Reference Include="SingingTool.Const, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>..\..\.tmp\SingingTool.Const.dll</HintPath>
+        </Reference>
         <Reference Include="SingingTool.Library, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\.tmp\SingingTool.Library.dll</HintPath>
         </Reference>
