支持插件自定义选项；命令行应用支持一件查看所有插件信息

--- a/csharp/Framework/OpenSvip.Framework.csproj
+++ b/csharp/Framework/OpenSvip.Framework.csproj
@@ -38,6 +38,8 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Choice.cs" />
+        <Compile Include="ConverterOptions.cs" />
         <Compile Include="Option.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="IProjectConverter.cs" />
