--- a/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
+++ b/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
@@ -53,6 +53,7 @@
         <Compile Include="BinarySvipConverter.cs" />
         <Compile Include="BinarySvipDecoder.cs" />
         <Compile Include="BinarySvipEncoder.cs" />
+        <Compile Include="BinarySvipVersions.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="OpenSvipConst.cs" />
     </ItemGroup>
