--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -47,6 +47,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="PhonemeUtils.cs" />
+        <Compile Include="PitchInterpolation.cs" />
         <Compile Include="SynthVConverter.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SynthVDecoder.cs" />
