--- a/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
+++ b/csharp/Plugins/BinSvip/Plugin.BinarySvip.csproj
@@ -73,6 +73,10 @@
         <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
         <Name>OpenSvip.Framework</Name>
       </ProjectReference>
+      <ProjectReference Include="..\..\Library\OpenSvip.Library\OpenSvip.Library.csproj">
+        <Project>{c0982090-a08e-45b8-953a-6d1750a69cdd}</Project>
+        <Name>OpenSvip.Library</Name>
+      </ProjectReference>
       <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
         <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
         <Name>OpenSvip.Model</Name>
