--- a/csharp/Console/OpenSvip.Console.csproj
+++ b/csharp/Console/OpenSvip.Console.csproj
@@ -15,6 +15,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Framework\OpenSvip.Framework.csproj" />
+      <ProjectReference Include="..\Library\OpenSvip.Library\OpenSvip.Library.csproj" />
     </ItemGroup>
 
 </Project>
