gj插件支持拍号导入xs

--- a/csharp/Model/OpenSvip.Model.csproj
+++ b/csharp/Model/OpenSvip.Model.csproj
@@ -34,7 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-      <HintPath>..\.tmp\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\软件\编曲\合成器\X Studio 2.0.2\XStudioSinger\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
