--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -5,7 +5,7 @@
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
         <ProjectGuid>{052F5EA1-52F4-46BE-AAC3-7CD031E3CDDE}</ProjectGuid>
-        <OutputType>Library</OutputType>
+        <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Plugin.SynthV</RootNamespace>
         <AssemblyName>Plugin.SynthV</AssemblyName>
@@ -46,9 +46,11 @@
         <Reference Include="System.Core" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="CurveGenerator.cs" />
+        <Compile Include="Interpolation.cs" />
         <Compile Include="PhonemeUtils.cs" />
-        <Compile Include="PitchGenerator.cs" />
-        <Compile Include="PitchInterpolation.cs" />
+        <Compile Include="PitchSimulator.cs" />
+        <Compile Include="PitchSlide.cs" />
         <Compile Include="SynthVConverter.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="SynthVDecoder.cs" />
