SynthV: 完成呼吸音符选项，sv 呼吸音符转 xs 换气标记

--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -46,6 +46,7 @@
         <Reference Include="System.Core" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="BreathOptions.cs" />
         <Compile Include="CurveGenerator.cs" />
         <Compile Include="Interpolation.cs" />
         <Compile Include="PhonemeUtils.cs" />
