--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -50,6 +50,7 @@
         <Compile Include="CurveGenerator.cs" />
         <Compile Include="Interpolation.cs" />
         <Compile Include="PhonemeUtils.cs" />
+        <Compile Include="PitchOptions.cs" />
         <Compile Include="PitchSimulator.cs" />
         <Compile Include="PitchSlide.cs" />
         <Compile Include="SynthVConverter.cs" />
