完成两种模式下的 svp 音符组解析和参数叠加

--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -5,7 +5,7 @@
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
         <ProjectGuid>{052F5EA1-52F4-46BE-AAC3-7CD031E3CDDE}</ProjectGuid>
-        <OutputType>Library</OutputType>
+        <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Plugin.SynthV</RootNamespace>
         <AssemblyName>Plugin.SynthV</AssemblyName>
@@ -50,8 +50,9 @@
         <Compile Include="CurveGenerator.cs" />
         <Compile Include="GroupOptions.cs" />
         <Compile Include="Interpolation.cs" />
-        <Compile Include="IParamExpression.cs" />
+        <Compile Include="ParamExpression.cs" />
         <Compile Include="CompoundParam.cs" />
+        <Compile Include="TrackMergeUtils.cs" />
         <Compile Include="PhonemeUtils.cs" />
         <Compile Include="PitchGenerator.cs" />
         <Compile Include="PitchOptions.cs" />
