--- a/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
+++ b/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
@@ -79,5 +79,10 @@
       <Name>OpenSvip.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Properties.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
