使用 Range 工具包重构部分代码

--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -52,6 +52,7 @@
         <Compile Include="Interpolation.cs" />
         <Compile Include="ParamExpression.cs" />
         <Compile Include="CompoundParam.cs" />
+        <Compile Include="RangeUtils.cs" />
         <Compile Include="TrackMergeUtils.cs" />
         <Compile Include="PhonemeUtils.cs" />
         <Compile Include="PitchGenerator.cs" />
