gj插件：过滤歌叽歌叽不支持的拼音，防止合成失败

--- a/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
+++ b/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
@@ -60,6 +60,7 @@
     <Compile Include="GjgjDecoder.cs" />
     <Compile Include="GjgjEncoder.cs" />
     <Compile Include="GjgjModel.cs" />
+    <Compile Include="GjgjSupportedPinyin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
