--- a/csharp/Framework/OpenSvip.Framework.csproj
+++ b/csharp/Framework/OpenSvip.Framework.csproj
@@ -40,11 +40,13 @@
     <ItemGroup>
         <Compile Include="Choice.cs" />
         <Compile Include="ConverterOptions.cs" />
+        <Compile Include="Errors.cs" />
         <Compile Include="Option.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="IProjectConverter.cs" />
         <Compile Include="PluginManager.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Warnings.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Model\OpenSvip.Model.csproj">
