--- a/csharp/GUI/packages.config
+++ b/csharp/GUI/packages.config
@@ -8,4 +8,6 @@
   <package id="MaterialDesignInXamlToolkitAddOns" version="0.0.4" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.4.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.7.0" targetFramework="net472" />
+  <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net472" />
+  <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net472" />
 </packages>
