完成简略的关于页面，优化UI细节和窗口缩放

--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -109,6 +109,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AboutDialog.xaml.cs">
+      <DependentUpon>AboutDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AsyncObservableCollection.cs" />
     <Compile Include="FileOverwriteDialog.xaml.cs">
       <DependentUpon>FileOverwriteDialog.xaml</DependentUpon>
@@ -126,6 +129,10 @@
       <DependentUpon>TaskListViewItem.xaml</DependentUpon>
     </Compile>
     <Compile Include="ValueConverters.cs" />
+    <Page Include="AboutDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="FileOverwriteDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
