快捷键支持和无障碍设计：支持除高级选项外所有功能通过键盘快捷键操作

--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -125,6 +125,7 @@
     <Compile Include="PluginDetailsBoard.xaml.cs">
       <DependentUpon>PluginDetailsBoard.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RelayCommand.cs" />
     <Compile Include="TaskListViewItem.xaml.cs">
       <DependentUpon>TaskListViewItem.xaml</DependentUpon>
     </Compile>
