--- a/csharp/GUI/packages.config
+++ b/csharp/GUI/packages.config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ControlzEx" version="4.3.0" targetFramework="net472" />
-  <package id="Dynamitey" version="2.0.10.189" targetFramework="net472" />
-  <package id="ExtendedWPFConverters" version="2.0.3" targetFramework="net472" />
-  <package id="ExtendedWPFVisualTreeHelper" version="2.0.2" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.5" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.4.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.7.0" targetFramework="net472" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net472" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net472" />
