--- a/csharp/Plugins/BinSvip/Plugin.BinSvip.csproj
+++ b/csharp/Plugins/BinSvip/Plugin.BinSvip.csproj
@@ -34,8 +34,9 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\.tmp\XStudioSinger\Newtonsoft.Json.dll</HintPath>
+        <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+          <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+          <Private>True</Private>
         </Reference>
         <Reference Include="SingingTool.Const, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\..\.tmp\SingingTool.Const.dll</HintPath>
@@ -59,6 +60,7 @@
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
+      <None Include="packages.config" />
     </ItemGroup>
     <ItemGroup>
       <Content Include="SingerDict.json">
