--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -36,8 +36,9 @@
         <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\..\..\..\..\..\XStudioSinger\NAudio.dll</HintPath>
         </Reference>
-        <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
-          <HintPath>..\..\.tmp\Newtonsoft.Json.dll</HintPath>
+        <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
+          <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+          <Private>True</Private>
         </Reference>
         <Reference Include="NPinyinPro, Version=0.3.3.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>..\..\packages\NPinyinPro.0.3.3\lib\net20\NPinyinPro.dll</HintPath>
