支持插件选项 Tips，插件开发者设置后，可以为用户使用选项提供更详细的解释与指引

--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -114,6 +114,7 @@
     <Compile Include="TaskListViewItem.xaml.cs">
       <DependentUpon>TaskListViewItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ValueConverterGroup.cs" />
     <Compile Include="ValueConverters.cs" />
     <Compile Include="YesNoDialog.xaml.cs">
       <DependentUpon>YesNoDialog.xaml</DependentUpon>
