修复程序集文件被占用导致插件安装失败的问题

--- a/csharp/Framework/OpenSvip.Framework.csproj
+++ b/csharp/Framework/OpenSvip.Framework.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="IProjectConverter.cs" />
     <Compile Include="PluginManager.cs" />
+    <Compile Include="TaskContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Warnings.cs" />
   </ItemGroup>
