midi插件：修复音符起始位置和长度转换错误，并默认移除常用标点符号，修改程序集信息

--- a/csharp/Plugins/Midi/Plugin.Midi.csproj
+++ b/csharp/Plugins/Midi/Plugin.Midi.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MidiDecoder.cs" />
     <Compile Include="MidiEncoder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
