gj插件：加强拼音数据校验，防止出现空格等符号导致无法识别，修改命名空间

--- a/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
+++ b/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{643E7EED-85E2-4FD6-99AF-9EAA718CF5FD}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Plugin.Gjgj</RootNamespace>
-    <AssemblyName>Plugin.Gjgj</AssemblyName>
+    <RootNamespace>FlutyDeer.GjgjPlugin</RootNamespace>
+    <AssemblyName>FlutyDeer.GjgjPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
